--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,18 +5,28 @@
 :root {
     --primary-font: 'sansation', cursive;
     --secondary-font: 'atkinson-hyperlegible-mono', sans-serif;
-    --primary-color: #447009; /* A shade of green */
-    --secondary-color: #350970; /* A shade of purple */
+    --primary-color: #243114; /* A shade of green */
+    --secondary-color: #3F5523; /* A shade of purple */
     --font-color: #5f2323; /* Dark gray for text */
 }
 
+/* Navbar Styles */
+#navbar {
+    background-color: var(--primary-color);
+}
+
+#navbar .logo {
+    width: 30px; 
+}
+/*
 .container, .row {
-    border: 2px solid red; /* Debugging borders */
+    border: 2px solid red; /* Debugging borders 
 }
 .col-12 {
-    border: 2px solid blue; /* Debugging borders */
+    border: 2px solid blue; /* Debugging borders 
 }
 body {
     font-family: var(--primary-font);
     color: var(--font-color);
-}
+} */
+
