--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,10 @@
     --font-color: #5f2323; /* Dark gray for text */
 }
 
+h1 {
+    font-family: var(--primary-font);
+    color: var(--primary-color);
+}
 /* Navbar Styles */
 #navbar {
     background-color: var(--primary-color);
