--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,13 @@ p {
     line-height: 1.6;
 }
 
+.cta-button a:hover { /* Hover effect for buttons */
+    background-color: transparent; /* or any color you prefer */
+    color: white;
+    transform: scale(1.05);
+    transition: all 0.3s ease-in-out;
+}
+
 /* Footer Styles */
 footer {
     color: whitesmoke
@@ -83,3 +90,16 @@ body {
     font-family: var(--primary-font);
     color: var(--font-color);
 } */
+
+@media (min-width: 320px) and (max-width: 425px) {
+    .about {
+        padding: 16px -16px 24px -16px;
+        margin-left: 12px;
+        margin-right: 12px;
+    }
+
+    .cta-button {
+        margin-top: 12px;
+        margin-bottom: 12px;
+    }
+}
