--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,6 +81,12 @@ p {
     transition: all 0.3s ease-in-out;
 }
 
+.hp-header {
+    color: #FFFFF0;
+    font-family: var(--primary-font);
+    font-weight: bolder;
+    font-size: 3rem;
+}
 /* Software Page Styles */
 
 .base {
