--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@
 :root {
     --primary-font: 'sansation', cursive;
     --secondary-font: 'atkinson-hyperlegible-mono', sans-serif;
-    --primary-color: #105f16;
+    --primary-color: #105f16; /
     /* A shade of green */
     --secondary-color: #2a3232;
     /* A shade of purple */
