--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,6 +101,7 @@ p {
     font-size: 1.1rem;
     font-weight: bold;
     color: #FFFFF0;
+    font-family: var(--secondary-font);
 }
 
 .pro {
@@ -115,7 +116,8 @@ p {
     margin-top: 24px;
     font-size: 1.1rem;
     font-weight: bold;
-    color: #FFFFF0
+    color: #FFFFF0;
+    font-family: var(--secondary-font);
 }
 
 .base-card {
