--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@
 :root {
     --primary-font: 'sansation', sans-serif;
     --secondary-font: 'atkinson-hyperlegible-mono', monospace;
-    --primary-color: #105f16;
+    --primary-color: #090909;
     /* A shade of green */
     --secondary-color: #2a3232;
     /* A shade of purple */
@@ -21,7 +21,7 @@ h1 {
 }
 
 body {
-    background-image: var(--background-image);
+    background-image: var(--primary-color);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
