--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@
     --secondary-color: #2a3232;
     /* A shade of purple */
     --font-color: #5e8d63;
-    --background-image: url('../images/construction-site-night.jpg');
+    --background-image: url('../images/new-background.jpg');
 
     /* Dark gray for text */
 }
@@ -21,7 +21,7 @@ h1 {
 }
 
 body {
-    background-image: var(--primary-color);
+    background-image: var(--background-image);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
